Fix SDE importer and module path
Fixes #2
